bk_ida/gccida/g1/lookup_label
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_label/src/c-decl.c:3207:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_label/src/c-decl.c:3231:24: error: use of undeclared identifier 'stru_634008'
error( ( const char *)&stru_634008, id->int_cst.int_cst.low); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lookup_label/src/obj/c-decl.o] Error 1
